--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_view"
     android:layout_width="150dp"
-    android:layout_height="105dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@mipmap/loading_bg"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/dialog_loading" />
+    <com.winfo.wenjie.widget.ProgressWheel
+        android:id="@+id/progress_wheel"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        wheel:matProg_barColor="#ffffff"
+        wheel:matProg_progressIndeterminate="true" />
 
     <TextView
         android:id="@+id/tipTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="数据加载中..."
         android:textColor="#ffffff" />
 
