--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -9,12 +9,10 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.winfo.wenjie.widget.ProgressWheel
+    <ProgressBar
         android:id="@+id/progress_wheel"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        wheel:matProg_barColor="#ffffff"
-        wheel:matProg_progressIndeterminate="true" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tipTextView"
@@ -22,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="数据加载中..."
         android:textColor="#ffffff" />
 
