--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary">
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,8 +47,8 @@
                 android:layout_marginLeft="6dp"
                 android:background="@null"
                 android:hint="Email / 用户名"
-                android:text="wj576038874"
                 android:inputType="textEmailAddress|text"
+                android:text="wj576038874"
                 android:textSize="16sp" />
 
             <View
@@ -73,8 +73,8 @@
                 android:layout_marginLeft="6dp"
                 android:background="@null"
                 android:hint="密码"
-                android:text="1rujiwang"
                 android:inputType="textPassword"
+                android:text="1rujiwang"
                 android:textSize="16sp" />
 
             <View
@@ -85,22 +85,79 @@
                 android:background="@color/colorPrimary" />
         </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/login"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="30dp"
-            android:text="登录"
-            android:textColor="#333" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:padding="12dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <Button
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="登录获取token"
+                    android:textColor="#333" />
+
+                <TextView
+                    android:id="@+id/result"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:padding="12dp" />
+
+                <Button
+                    android:id="@+id/getme"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="嵌套请求获取用户信息"
+                    android:textColor="#333" />
+
+                <TextView
+                    android:id="@+id/userdetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:padding="12dp" />
+
+                <Button
+                    android:id="@+id/btn_hebing"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="30dp"
+                    android:text="和并请求"
+                    android:textColor="#333" />
+
+                <TextView
+                    android:id="@+id/tv_hebing1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:padding="12dp" />
+
+                <TextView
+                    android:id="@+id/tv_hebing2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:padding="12dp" />
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
 </LinearLayout>
