--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,12 @@
         android:layout_marginTop="30dp"
         android:src="@mipmap/ic_launcher" />
 
+    <TextView
+        android:id="@+id/id_textview"
+        android:layout_width="wrap_content"
+        android:text="123"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
